--- a/style.css
+++ b/style.css
@@ -254,12 +254,6 @@ button {
   margin: 7em 0;
 }
 
-/* card section ends here */
-
-/* if (student.house === 'Slytherin') {
-  houseCrest.setAttribute('style', ' background: url(./harryp/crests.png); background-size: contain; ');
-} */
-
 
 /** modal section starts here */
 .house-crest {
@@ -301,8 +295,8 @@ button {
 }
 
 .modal-content {
-  width: 70%;
-  height: 75%;
+  width: 55%;
+  height: 70%;
   margin: 5em auto;
   background: var(--background-color);
   color: var(--heading-color);
@@ -362,7 +356,7 @@ button {
   transform: translate(35%, 50%);
 }
 
-.hacked .inquisText{
+.hacked .inquisText {
   font-size: .3em;
   visibility: hidden;
   width: 250px;
@@ -387,7 +381,8 @@ button {
   transform: scale(.9);
 }
 
-.inquis:hover .inquisText, .hacked:hover .inquisText {
+.inquis:hover .inquisText,
+.hacked:hover .inquisText {
   visibility: visible;
 }
 
@@ -479,20 +474,205 @@ button {
   animation: spining 5s infinite alternate;
 }
 
-.systemHacked  {
-position: fixed;
-top: 0;
-bottom: 0;
-right: 0;
-left: 0;
-width: 100vw;
-height: 100vh;
-z-index: 5;
-display: none;
+/* hacked */
+.systemHacked {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 5;
+  display: none;
 }
 
-.systemHacked video{
+.systemHacked video {
   min-height: 100vh;
   min-width: 100vw;
+
+}
+/* footer */
+footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+background: var(--secondary-color);
+min-height: 100px;
+border-radius: 10px;
+}
+
+
+
+/* media queries  */
+
+@media only screen and (max-width: 1400px) {
+  .houseCrest {
+    max-height: 50%;
+  } }
+
+  @media only screen and (max-width: 1080px) {
+
+    /* hero section */
+    .hero {
+      display: flex;
+      flex-direction: column;
+      /* background: red; */
+      justify-content: space-between;
+      align-items: center;
+      padding: 1em;
+      margin-bottom: 5em;
+      height: 50vh;
+
+    }
+
+
+    .houseCrest {
+      max-height: 100%;
+      animation: rota 5s;
+      align-self: center;
+    }
+
+    .hero .content {
+      align-items: center;
+      margin: 0 auto;
+    }
+
+    .hero .heroHeading {
+      font-size: 3em;
+    }
+
+    .hero .heroDesc {
+      font-size: 18px;
+    }
+
+    .soundImg img {
+      bottom: -10%;
+      left: 0;
+    }
+
+    .hero .arrowDown {
+      top: 76%;
+    }
+
+    /* filter and sort section */
+    .filterSection {
+      flex-direction: row;
+      justify-content: space-evenly;
+      align-items: center;
+      min-height: 230px;
+
+    }
+
+    .filterSection .filter,
+    .filterSection .sort,
+    .filterSection .search {
+      width: 30%;
+    }
+  }
+
+
+
+@media only screen and (max-width: 760px) {
+
+  /* hero section */
+  .hero {
+    height: 70vh;
+  }
+
+  .houseCrest {
+    margin: -1.5em;
+    height: 100%;
+  }
+
+  /* filter section */
+  .filterSection {
+    width: 100%;
+    margin: 0 auto;
+    flex-direction: column;
+  }
+
+  .filterSection .filter,
+  .filterSection .sort,
+  .filterSection .search {
+    width: 50%;
+  }
+
+  /* card section */
+  .cardWrapper {
+    width: 350px;
+    height: 240px;
+
+  }
+
+  .button {
+    font-size: .8em;
+  }
+
+  .cardWrapper [data-field="img"] {
+    max-height: 50%;
+  }
+
+  [data-field="name"] {
+    font-size: 1.3em;
+  }
+     /* modal */
+     .modal-content {
+      flex-direction: column;
+      height: 80%;
+      margin: 2em;
+      width: 80%;
+      padding: 2em;
+    }
+
+    .modal-content [data-field="img"] {
+      height: 20%;
+    }
+
+  /* rest */
+  #main {
+    justify-content: center;
+    overflow: hidden;
+    margin-top: 10em;
+  }
+
+  body {
+    padding: .5em;
+  }
+
+}
+
+@media only screen and (max-width: 500px) {
+
+  /* hero section */
+  .arrowDown {
+    display: none;
+  }
+
+  .houseCrest {
+    margin: -5em;
+  }
+
+  .hero {
+    height: 70vh;
+  }
+
+  .hero .content {
+    margin-bottom: 7em;
+  }
+
+  .soundImg img {
+    bottom: 13%;
+    height: 70px;
+  }
+
+  /* filter sextion */
+  .filterSection .filter,
+  .filterSection .sort,
+  .filterSection .search {
+    width: 90%;
+  }
+
+
 
 }
